--- a/src/styles.css
+++ b/src/styles.css
@@ -1,95 +1,98 @@
 .App {
-    text-align: center;
+	text-align: center;
 }
 body {
-    background-color: #20354c;
-    font-family: "Cousine", monospace-serif;
+	background-color: #20354c;
+	font-family: "Cousine", monospace-serif;
 }
 .container {
-    background-color: white;
+	background-color: white;
 }
 
 .app-container {
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
+	overflow-x: hidden;
+	display: flex;
+	flex-direction: column;
 }
 
 .container-fluid {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 /* Page Layout */
 .component-wrapper {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 .header {
-    display: flex;
-    align-items: center;
-    margin-top: 1rem;
-    font-weight: bold;
-    border-bottom: 1px solid lightgray;
-    padding-bottom: 1rem;
+	display: flex;
+	align-items: center;
+	margin-top: 1rem;
+	font-weight: bold;
+	border-bottom: 1px solid lightgray;
+	padding-bottom: 1rem;
 }
 
 /* Spinner */
 .spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
 }
 
 /* Theme Colors */
 .bg-primary {
-    background-color: #1c2a3d;
+	background-color: #1c2a3d;
+}
+.bg-info {
+	background-color: #c5c5c5 !important;
 }
 /* Buttons */
 .btn.btn-default {
-    background-color: #1c2a3d;
-    color: #eeeeee;
-    font-weight: bold;
-    text-shadow: none;
-    background-image: none;
-    float: none;
+	background-color: #1c2a3d;
+	color: #eeeeee;
+	font-weight: bold;
+	text-shadow: none;
+	background-image: none;
+	float: none;
 }
 .btn.btn-primary {
-    background-color: #033389;
-    color: #eeeeee;
-    font-weight: bold;
-    text-shadow: none;
-    background-image: none;
-    border: 0;
-    float: none;
+	background-color: #033389;
+	color: #eeeeee;
+	font-weight: bold;
+	text-shadow: none;
+	background-image: none;
+	border: 0;
+	float: none;
 }
 
 .btn.btn-primary:hover {
-    background-color: #002567;
+	background-color: #002567;
 }
 
 .btn.btn-info {
-    background-color: #0ead8e;
-    font-weight: bold;
-    text-shadow: none;
-    background-image: none;
-    border-radius: 0;
-    border: 0;
-    float: none;
+	background-color: #0ead8e;
+	font-weight: bold;
+	text-shadow: none;
+	background-image: none;
+	border-radius: 0;
+	border: 0;
+	float: none;
 }
 .btn.btn-info:hover {
-    background-color: #0c9076;
+	background-color: #0c9076;
 }
 
 .btn.btn-danger {
-    background-color: #a90000;
+	background-color: #a90000;
 }
 
 .drag-handle {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 /* Lists */
 ul {
-    padding: 0;
+	padding: 0;
 }
