--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,7 @@ body {
 	text-shadow: none;
 	background-image: none;
 	float: none;
+	border-radius: 0;
 }
 .btn.btn-primary {
 	background-color: #033389;
@@ -65,6 +66,7 @@ body {
 	background-image: none;
 	border: 0;
 	float: none;
+	border-radius: 0;
 }
 
 .btn.btn-primary:hover {
@@ -86,6 +88,12 @@ body {
 
 .btn.btn-danger {
 	background-color: #a90000;
+	border-radius: 0;
+	font-weight: bold;
+	text-shadow: none;
+	color: #eeeeee;
+	background-image: none;
+	border: 0;
 }
 
 .drag-handle {
