lots of progress and it'd be stupid not to save right now

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,15 @@ body {
 	padding-bottom: 1rem;
 }
 
+.header h1,
+.header h2,
+.header h3,
+.header h4,
+.header h5,
+.header h6 {
+	margin: auto;
+}
+
 /* Spinner */
 .spinner {
 	position: absolute;
