--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,21 @@
+* {
+	/* Firefox */
+	scrollbar-width: thin;
+	scrollbar-color: #6c757d #343a40;
+}
+
+/* Chrome/Edge/Safari */
+*::-webkit-scrollbar {
+	width: 10px;
+}
+*::-webkit-scrollbar-track {
+	background: #343a40;
+}
+*::-webkit-scrollbar-thumb {
+	background-color: #6c757d;
+	border: 2px solid #6c757d;
+}
+
 .App {
 	text-align: center;
 }
