--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@
 }
 body {
 	background-color: #20354c;
-	font-family: "Cousine", monospace-serif;
+	font-family: "Roboto", sans-serif;
 }
 .container {
 	background-color: white;
