--- a/src/pages/form/list/formList.css
+++ b/src/pages/form/list/formList.css
@@ -4,6 +4,10 @@
 	flex: 1;
 	width: 50%;
 }
+.form-element .drag-handle {
+	margin: auto;
+	margin-right: 2rem;
+}
 
 .form-element .card {
 	width: 100%;
