--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,29 +1,9 @@
-.image-comparison-col {
+.comparison-image-text-wrapper {
 	display: flex;
-	justify-content: space-between;
-	margin: 1rem 0;
-	height: 30vh;
+	align-items: center;
 }
 
-.image-comparison-col img {
-	border: 3px solid gray;
-	width: 75%;
-}
-
-.image-comparison-col .text {
-	margin: auto;
-}
-
-.image-comparison-col .text.right {
-	text-align: right;
-}
-
-.steps-card {
-	flex-basis: 40% !important;
-	margin: 1rem auto;
-}
-
-.home-header {
-	font-weight: bold;
-	text-align: center;
+.comparison-image-wrapper {
+	display: flex;
+	justify-content: center;
 }
