Removed react-live-clock dependency. Changed date and time types to text with default values formatted for their input type. UX Improvements to form creation and minor navbar styling updates.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,7 +8,9 @@ html {
 	/* Fix for jumpy scrollbar */
 	margin-left: calc(100vw - 100%);
 }
-
+body.modal-open {
+	padding-right: 0 !important;
+}
 /* Chrome/Edge/Safari */
 *::-webkit-scrollbar {
 	width: 10px;
