--- a/src/styles/custom2.css
+++ b/src/styles/custom2.css
@@ -8417,3 +8417,10 @@ a.text-dark:hover {
 		border-color: #dee2e6;
 	}
 }
+
+.btn-xs {
+	 padding: .25rem .4rem;
+  font-size: .875rem;
+  line-height: .5;
+  border-radius: .2rem;
+}
